--- a/09-practice-project-project-management-app--with-components-state-refs--and-more/frontend/src/index.css
+++ b/09-practice-project-project-management-app--with-components-state-refs--and-more/frontend/src/index.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@keyframes opacityToggle {
+	0%, 100% { opacity: 0; }
+	50% { opacity: 1; }
+}
