--- a/22-building-a-multi-page-spa-with-react-router/02-project/frontend/src/components/EventForm.module.css
+++ b/22-building-a-multi-page-spa-with-react-router/02-project/frontend/src/components/EventForm.module.css
@@ -27,8 +27,9 @@
   cursor: pointer;
   padding: 0.5rem 1.5rem;
   border-radius: 4px;
-  background-color: var(--color-gray-300);
+  /*background-color: var(--color-gray-300);*/
   color: var(--color-gray-800);
+
   border: none;
 }
 
